# righor-py

./: .gitignore  Cargo.toml  Examples.ipynb  Tests.ipynb  pyproject.toml
.github/workflows/: CI.yml
models/: models.json~
python/righor/: __init__.py  utils.py
righor/data/models/mouse/t_beta/tmp1/: .#model_params.txt
src/: lib.rs
src/vdj/: mod.rs
src/vj/: mod.rs
