[package]
name = "righor_py"
version = "0.2.8-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "_righor"

[dependencies]
righor = {path = "../righor", version = "0.2.4", default-features = false, features=['py_binds', 'pyo3']}
anyhow = "1.0.76"
pyo3 = {version = "0.21", features = ["extension-module", "anyhow", "multiple-pymethods"]}
pyo3-pylogger = {version="0.3.0"}
numpy = {version = "0.21"}
approx = {version = "0.5.1"}
rayon = "1.8.1"
ndarray = {version="0.15", features = ["approx", "serde"]}
env_logger = "0.11.5"

[profile.release]
opt-level = 3
debug = true
