[build-system]
requires = ["maturin>=1.0,<2.0","setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "maturin"

[project]
name = "righor"
require-python = ">=3.7"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "righor._righor"